# Auto-meetings

./: .gitignore  CMakeLists.txt  CONST.py  Global.py  JSON.cpp  JSON.h  README.md  auth.sh  config.py  get_links.bat  get_links.sh  get_links_from_mails.py  lectures.json  main.cpp  main.h  main.py  meetings.cpp  meetings.h  my_time.cpp  my_time.h  options.cpp  options.h  run.sh  s.json  set_up.bat  set_up.sh  shit.py
browser/: Auth.py  Browser.py  Mail.py  Meeting.py  Meetings.py  MeetingsOpener.py  Miner.py  __init__.py  generate_credentials.py  manage_dates.py
main_functionalities/: JSON.cpp  JSON.h  main.cpp  main.h  my_time.cpp  my_time.h  options.cpp
main_funtionalities/: main.h  options.cpp  options.h
new/: main.py
new/website/: __init__.py  website.py
new/website/static/strona_www/: generic.html
new/website/templates/: base.html
python_scripts/: COMMANDS.py  Mail.py  get_links_from_mails.py  manage_dates.py
scripts/: CONST.sh  auth.sh  automeetings.service  dependencies.txt  install.sh  uninstall.sh
variables/: GLOBAL  config.json  config.py  names.txt  next_meeting.json  next_meeting.txt  test_mode.h
variables/operating_systems/: MacOS.h  MacOS.py  Ubuntu.h  Ubuntu.py  Windows.h  Windows.py
website/: __init__.py  buttons.py  jinja_functions.py  website.py
website/static/: index.js
website/static/strona_www/archive/: generic.html  poradniki.html
website/static/strona_www/assets/css/: main.css  noscript.css
website/static/strona_www/assets/sass/: noscript.scss
website/templates/: base.html
(+2 files in other folders)
